--- a/Training Pipeline/requirements.txt
+++ b/Training Pipeline/requirements.txt
@@ -1,4 +1,6 @@
-torch==2.0.1
-torchvision==0.15.2
-transformers
 streamlit
+torch==2.2.2+cpu
+torchvision==0.17.2+cpu
+torchaudio==2.2.2+cpu
+-f https://download.pytorch.org/whl/torch_stable.html
+transformers
