--- a/Training Pipeline/requirements.txt
+++ b/Training Pipeline/requirements.txt
@@ -1,5 +1,9 @@
 torch==2.2.2+cpu
 torchvision==0.17.2+cpu
 torchaudio==2.2.2+cpu
+-f https://download.pytorch.org/whl/torch_stable.html
 transformers
-
+Pillow
+pandas
+numpy
+scikit-learn
