--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-torch==2.2.2+cpu
-torchvision==0.17.2+cpu
-torchaudio==2.2.2+cpu
--f https://download.pytorch.org/whl/torch_stable.html
+torch==2.2.2
+torchvision==0.17.2
+torchaudio==2.2.2
 transformers
+
+
